[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/Waves/Wave1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Areas/AsteroidSurface/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Levels/TowerPlacer/TowerPlacer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/PlayerBase/PlayerBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://VFX/PathPreview.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Waves/Wave2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/EventsPlayer.gd" type="Script" id=8]
[ext_resource path="res://Levels/WaveSpawner2D.gd" type="Script" id=9]
[ext_resource path="res://Levels/Level.gd" type="Script" id=10]
[ext_resource path="res://sprite-sheet.svg" type="Texture" id=11]
[ext_resource path="res://Levels/AStarGrid/AStarGrid.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "00.first-wave"
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("WaveSpawner2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "01.second-wave"
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("WaveSpawner2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 1, 1, 1, 1, 131074, 2, 1, 2, 3, 1, 0, 4, 1, 65537, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 1, 2, 9, 1, 131074, 10, 1, 131072, 11, 1, 65537, 12, 1, 65536, 13, 1, 65538, 14, 1, 2, 15, 1, 131073, 16, 1, 131072, 17, 1, 65538, 18, 1, 65536, 19, 1, 65538, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 1, 65536, 25, 1, 65537, 26, 1, 1, 27, 3, 0, 28, 3, 0, 29, 3, 0, 65536, 1, 0, 65537, 1, 65538, 65538, 1, 131073, 65539, 1, 131074, 65540, 1, 65536, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 1, 131073, 65561, 1, 0, 65562, 1, 65537, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 131072, 1, 1, 131073, 1, 131074, 131074, 3, 0, 131075, 2, 3, 131076, 2, 131072, 131077, 2, 131072, 131078, 2, 131072, 131079, 2, 131072, 131080, 2, 131072, 131081, 2, 131075, 131082, 2, 131072, 131083, 2, 131072, 131084, 2, 131072, 131085, 2, 131072, 131086, 2, 131072, 131087, 2, 131072, 131088, 2, 131072, 131089, 2, 131072, 131090, 2, 131072, 131091, 2, 131072, 131092, 2, 131075, 131093, 2, 131072, 131094, 2, 4, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 196608, 1, 131074, 196609, 1, 1, 196610, 3, 0, 196611, 2, 131074, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 2, 131074, 196618, 1, 1, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 1, 1, 196623, 1, 2, 196624, 1, 65538, 196625, 1, 131073, 196626, 3, 0, 196627, 3, 0, 196628, 2, 131074, 196629, 3, 0, 196630, 2, 65539, 196631, 2, 131072, 196632, 2, 131072, 196633, 2, 131072, 196634, 2, 131072, 196635, 2, 4, 196636, 3, 0, 196637, 3, 0, 262144, 1, 2, 262145, 1, 131072, 262146, 3, 0, 262147, 2, 131074, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 2, 131074, 262154, 1, 65537, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 2, 131074, 262165, 3, 0, 262166, 3, 0, 262167, 1, 131072, 262168, 1, 0, 262169, 3, 0, 262170, 3, 0, 262171, 2, 131074, 262172, 3, 0, 262173, 3, 0, 327680, 1, 131072, 327681, 3, 0, 327682, 3, 0, 327683, 2, 131074, 327684, 1, 0, 327685, 1, 65537, 327686, 1, 65537, 327687, 3, 0, 327688, 3, 0, 327689, 2, 131074, 327690, 1, 131074, 327691, 1, 65537, 327692, 1, 131072, 327693, 1, 65536, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 2, 131074, 327701, 3, 0, 327702, 3, 0, 327703, 1, 65537, 327704, 1, 131074, 327705, 3, 0, 327706, 3, 0, 327707, 2, 131074, 327708, 3, 0, 327709, 3, 0, 393216, 1, 131074, 393217, 2, 3, 393218, 2, 131072, 393219, 2, 131076, 393220, 2, 131072, 393221, 2, 131072, 393222, 2, 4, 393223, 3, 0, 393224, 1, 2, 393225, 2, 65539, 393226, 2, 131072, 393227, 2, 131072, 393228, 2, 131075, 393229, 2, 131072, 393230, 2, 131072, 393231, 2, 131072, 393232, 2, 131072, 393233, 2, 131075, 393234, 2, 131072, 393235, 2, 131072, 393236, 2, 65540, 393237, 3, 0, 393238, 3, 0, 393239, 1, 65537, 393240, 1, 131073, 393241, 3, 0, 393242, 2, 3, 393243, 2, 65540, 393244, 3, 0, 393245, 3, 0, 458752, 1, 65538, 458753, 2, 131074, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 2, 131074, 458759, 3, 0, 458760, 1, 131072, 458761, 1, 0, 458762, 3, 0, 458763, 3, 0, 458764, 2, 131074, 458765, 1, 131073, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 2, 131074, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 1, 1, 458776, 3, 0, 458777, 3, 0, 458778, 2, 131074, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 524288, 3, 0, 524289, 2, 131074, 524290, 3, 0, 524291, 1, 65538, 524292, 1, 2, 524293, 1, 65536, 524294, 2, 131074, 524295, 3, 0, 524296, 3, 0, 524297, 1, 131074, 524298, 3, 0, 524299, 3, 0, 524300, 2, 196611, 524301, 2, 131072, 524302, 2, 131072, 524303, 2, 131072, 524304, 2, 131072, 524305, 2, 65540, 524306, 3, 0, 524307, 1, 131073, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 2, 131074, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 589824, 3, 0, 589825, 2, 131074, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 2, 131074, 589831, 3, 0, 589832, 1, 65537, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 2, 131074, 589837, 1, 131074, 589838, 1, 131073, 589839, 1, 131072, 589840, 3, 0, 589841, 3, 0, 589842, 1, 2, 589843, 1, 65536, 589844, 3, 0, 589845, 3, 0, 589846, 1, 65536, 589847, 1, 65538, 589848, 1, 65536, 589849, 3, 0, 589850, 2, 131074, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 655360, 3, 0, 655361, 2, 65539, 655362, 2, 131072, 655363, 2, 4, 655364, 3, 0, 655365, 3, 0, 655366, 2, 131074, 655367, 3, 0, 655368, 1, 131072, 655369, 1, 1, 655370, 3, 0, 655371, 3, 0, 655372, 2, 131074, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 2, 3, 655377, 2, 131072, 655378, 2, 131072, 655379, 2, 131072, 655380, 2, 131072, 655381, 2, 131072, 655382, 2, 131072, 655383, 2, 131072, 655384, 2, 131072, 655385, 2, 131072, 655386, 2, 196612, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 720896, 1, 65538, 720897, 3, 0, 720898, 3, 0, 720899, 2, 65539, 720900, 2, 131075, 720901, 2, 131072, 720902, 2, 131076, 720903, 2, 131072, 720904, 2, 131072, 720905, 2, 131072, 720906, 2, 131075, 720907, 2, 131072, 720908, 2, 131076, 720909, 2, 131072, 720910, 2, 131072, 720911, 2, 131072, 720912, 2, 196612, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 1, 131074, 720919, 1, 131072, 720920, 1, 65538, 720921, 3, 0, 720922, 2, 131074, 720923, 1, 65538, 720924, 3, 0, 720925, 3, 0, 786432, 1, 0, 786433, 1, 65537, 786434, 3, 0, 786435, 3, 0, 786436, 2, 131074, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 1, 0, 786441, 3, 0, 786442, 2, 131074, 786443, 1, 65537, 786444, 1, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 2, 131074, 786449, 3, 0, 786450, 3, 0, 786451, 1, 65538, 786452, 3, 0, 786453, 1, 131074, 786454, 1, 0, 786455, 1, 65538, 786456, 3, 0, 786457, 3, 0, 786458, 2, 131074, 786459, 1, 65538, 786460, 3, 0, 786461, 3, 0, 851968, 1, 131073, 851969, 1, 0, 851970, 1, 65538, 851971, 1, 0, 851972, 2, 131074, 851973, 3, 0, 851974, 1, 131074, 851975, 1, 0, 851976, 1, 2, 851977, 3, 0, 851978, 2, 131074, 851979, 3, 0, 851980, 1, 65536, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 2, 65539, 851985, 2, 131072, 851986, 2, 4, 851987, 3, 0, 851988, 3, 0, 851989, 1, 65538, 851990, 1, 0, 851991, 3, 0, 851992, 3, 0, 851993, 2, 3, 851994, 2, 65540, 851995, 1, 65536, 851996, 3, 0, 851997, 3, 0, 917504, 1, 1, 917505, 1, 65536, 917506, 1, 1, 917507, 1, 1, 917508, 2, 65539, 917509, 2, 131072, 917510, 2, 131072, 917511, 2, 4, 917512, 3, 0, 917513, 3, 0, 917514, 2, 131074, 917515, 3, 0, 917516, 1, 65537, 917517, 1, 131072, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 2, 131074, 917523, 3, 0, 917524, 3, 0, 917525, 1, 131073, 917526, 1, 1, 917527, 3, 0, 917528, 3, 0, 917529, 2, 131074, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 983040, 3, 0, 983041, 1, 65538, 983042, 1, 131073, 983043, 1, 65536, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 2, 65539, 983048, 2, 131072, 983049, 2, 131072, 983050, 2, 131076, 983051, 2, 131072, 983052, 2, 131072, 983053, 2, 131072, 983054, 2, 131072, 983055, 2, 131072, 983056, 2, 131072, 983057, 2, 131072, 983058, 2, 131076, 983059, 2, 131072, 983060, 2, 131072, 983061, 2, 131072, 983062, 2, 131072, 983063, 2, 131072, 983064, 2, 131072, 983065, 2, 65540, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 1, 0, 1048581, 1, 2, 1048582, 1, 1, 1048583, 3, 0, 1048584, 1, 2, 1048585, 1, 65536, 1048586, 1, 131072, 1048587, 3, 0, 1048588, 3, 0, 1048589, 1, 1, 1048590, 1, 65538, 1048591, 1, 65536, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 1, 2, 1048596, 1, 131072, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 1, 131074, 1048602, 1, 1, 1048603, 1, 1, 1048604, 3, 0, 1048605, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="AStarGrid" parent="." instance=ExtResource( 12 )]

[node name="TowerPlacer" parent="." instance=ExtResource( 3 )]

[node name="PathPreview" parent="." instance=ExtResource( 5 )]
points = PoolVector2Array( 224, 160, 608, 160, 608, 416, 800, 416, 800, 736, 1056, 736, 1056, 672, 1408, 672 )

[node name="WaveSpawner2D" type="Position2D" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}
spawn_scene = ExtResource( 7 )

[node name="EventsPlayer" type="AnimationPlayer" parent="."]
anims/00.first-wave = SubResource( 1 )
anims/01.second-wave = SubResource( 2 )
script = ExtResource( 8 )

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 224, 672 )

[node name="Sprite" type="Sprite" parent="StartPoint"]
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 319, 192, 65, 65 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoalPoint" type="Position2D" parent="."]
position = Vector2( 1248, 416 )

[node name="PlayerBase" parent="GoalPoint" instance=ExtResource( 4 )]
